Trying to switch to fxml for the button grid

--- a/src/main/resources/App.css
+++ b/src/main/resources/App.css
@@ -21,6 +21,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
+.root {
+    -fx-background-color: darkcyan;
+}
+
 .button {
     -fx-font-size: 50px;
+    -fx-background-color: aquamarine;
+
 }
