--- a/src/main/resources/TestApp.css
+++ b/src/main/resources/TestApp.css
@@ -22,28 +22,11 @@
  * SOFTWARE.
  */
 
-package nl.pinguinlars.pinguinterm;
-
-public class KeyboardHandler {
-    private static final LogHandler Logger = new LogHandler(false);
-    private static final LogHandler ErrorLogger = new LogHandler(true);
-
-    public static void MovementKeys(String Key) {
-        switch (Key) {
-            case "A" -> Main.serial.SendMessage("Left");
-            case "D" -> Main.serial.SendMessage("Right");
-            case "S" -> Main.serial.SendMessage("Back");
-            case "SA" -> Main.serial.SendMessage("BackLeft");
-            case "SD" -> Main.serial.SendMessage("BackRight");
-            case "W" -> Main.serial.SendMessage("Forward");
-            case "WA" -> Main.serial.SendMessage("ForwardLeft");
-            case "WD" -> Main.serial.SendMessage("ForwardRight");
-            case null -> {
-                System.out.println("Invalid Statement Given");
-                ErrorLogger.Log("Invalid Statement Given");
-            }
-            default -> Main.serial.SendMessage("Stop");
-        }
-        Logger.Log("Key" + Key + "Pressed");
-    }
+.root {
+    -fx-background-color: darkcyan;
+}
+.button {
+    -fx-background-color: aquamarine;
+    -fx-font-scale: 50px;
+    -fx-font-family: Arial;
 }
