--- a/src/main/resources/App.css
+++ b/src/main/resources/App.css
@@ -27,12 +27,16 @@
 
 .button {
     -fx-font-size: 50px;
+    -fx-background-radius: 10%;
     -fx-background-color: mediumaquamarine;
+    -fx-border-radius: 10%;
+    -fx-border-color: lightcyan;
 }
 
 .button:hover {
     -fx-background-color: aquamarine;
 }
+
 .button:pressed {
     -fx-background-color: aqua;
 }
